fix: keep MCP tool catalog order stable